added header and curriculam section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids-Education-Figma</title>
+    <link rel="stylesheet" href="style.css/style.css">
+    <!-- font awsome cdn link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    
+<body class="quicksand-font">
+    <header>
+        <!-- Navbar -->
+        <section class="navbar-container">
+            <div class="logo display-flex">
+                <img src="assets/logo.png" alt="">
+                <h1>SCHOOL</h1>
+            </div>
+            <nav class="navbar">
+                <ul class="nav-items display-flex">
+                    <li><a href="" class="item-1 orange">Home</a></li>
+                    <li><a href="" class="item-2 sky-blue">About</a></li>
+                    <li><a href="" class="item-3 aqua-blue">Facilities</a></li>
+                    <li><a href="" class="item-4 blue-lotus">Admission</a></li>
+                </ul>
+            </nav>
+            <div class="nav-btn"><button class="btn">Contact</button></div>
+        </section>
+        <!-- Banner -->
+         <section class="banner-container display-grid">
+            <div class="banner-info">
+                <h1 class="banner-title">
+                    <span class="orange">Empowering</span><br>
+                    students from small age <span class="skyblue">towards vision</span>
+                </h1>
+                <p class="banner-dis">
+                    With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.
+                </p>
+                <div><button class=" primary-btn">Entoll Now</button></div>
+            </div>
+            <div class="side-img">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+         </section>
+    </header>
+    <main>
+        <section class="curriculum">
+            <h1>Standard Curriculum</h1>
+            <div class="card-holder display-grid">
+                <div class="card">
+                    <img src="assets/kinder.png" alt="" class="card-img">
+                    <h3 class="card-title">Kinder (3-6) Years</h3>
+                    <p class="card-dis">In 1779, Johann Friedrich Oberlin and Louise Scheppler founded in Strasbourg  were absent during the day.[2]</p>
+                    <p><a href="" class="aqua-blue">Read more</a></p>
+                </div>
+                <div class="card card-2">
+                    <img src="assets/elementary.png" alt="" class="card-img">
+                    <h3 class="card-title">Elementary School</h3>
+                    <p class="card-dis">A primary school in Ireland, India, the United Kingdom,[1] Australia,[2] New Zealand, Jamaica, South Africa, and Singapore</p>
+                    <p><a href="" class="orange">Read more</a></p>
+                </div>
+                <div class="card">
+                    <img src="assets/middle.png" alt="" class="card-img">
+                    <h3 class="card-title">Middle (10-16) Years</h3>
+                    <p class="card-dis">As an alternative to the middle school model, some secondary schools classify campuses share facilities ] junior high school" </p>
+                    <p><a href="" class="blue-lotus">Read more</a></p>
+                </div>
+                <!-- <div class="arrows">
+                    <div class="arrow-1">
+                        <img src="assets/arrow.png" alt="">
+                    </div>
+                    <div class="arrow-2">
+                        <img src="assets/arrow.png" alt="">
+                    </div>
+                </div>
+            </div> -->
+        </section>
+        <div class="arrow">
+            <div class="arrow-1"><p><</p></div>
+            <div class="arrow-1"><p>></p></div>
+        </div>
+    </main>
 </body>
 </html>
