complite full web page and make responsive. but there are some issues

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
          </section>
     </header>
     <main>
-        <section class="bg-section">
-            
+        <section class="bg-section"> 
             <section class="curriculum center">
                 <h1>Standard Curriculum</h1>
                 <div class="card-holder display-grid">
@@ -83,8 +82,7 @@
                 <div class="arrow-1"><p><</p></div>
                 <div class="arrow-1"><p>></p></div>
             </div>
-            <!-- <section class="bg-section gradient">
-
+            <section class="bg-section gradient">
                 <section class="our-stories center ">
                     <h1>Our Stories</h1>
                     <div class="stories">
@@ -156,15 +154,15 @@
                 <div class="view-btn">
                     <button class="primary-btn">View All</button>
                 </div>
-            </section> -->
+            </section -->
     </main>
-    <!-- <footer>
+    <footer>
         <section class="footer-container">
             <div class="education">
                 <div class="box-holder">
 
                     <div class="box">
-                        <img src="assets/logo.png" alt="" class="education-logo">
+                        <img src="assets/footer logo.png" alt="" class="education-logo">
                     </div>
                     <h1 class="education-title">Kids Education</h1>
                 </div>
@@ -189,6 +187,6 @@
                 </div>
             </div>
         </section>
-    </footer>  --> -->
+    </footer>
 </body>
 </html>
